@@ -1,4 +1,4 @@
-ordinal,uid,gsims,weight
-0,b1~b11,GMPETable(gmpe_table='Wcrust_low_rhypo.hdf5'),0.16
-1,b1~b12,GMPETable(gmpe_table='Wcrust_med_rhypo.hdf5'),0.68
-2,b1~b13,GMPETable(gmpe_table='Wcrust_high_rhypo.hdf5'),0.16
+ordinal,uid,model,gsim,weight
+0,b1~b11,vancouver_area_source.xml,GMPETable(gmpe_table='Wcrust_low_rhypo.hdf5'),0.16
+1,b1~b12,vancouver_area_source.xml,GMPETable(gmpe_table='Wcrust_med_rhypo.hdf5'),0.68
+2,b1~b13,vancouver_area_source.xml,GMPETable(gmpe_table='Wcrust_high_rhypo.hdf5'),0.16
